back to using relative paths

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
 
     <script src="http://threejs.org/build/three.min.js"></script>
 
@@ -30,7 +31,7 @@
 
     <style>
         body {
-            background: rgb(255, 0, 255);
+            background: rgb(0, 0, 255);
             margin: 0;
             padding: 0;
         }
