--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script>
         $(document).ready(function () {
-            app.boot();
+            App.boot();
         });
     </script>
 
