--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="http://threejs.org/build/three.min.js"></script>
-
+    <script src="http://threejs.org/examples/js/postprocessing/EffectComposer.js"></script>
+    <script src="http://threejs.org/examples/js/postprocessing/RenderPass.js"></script>
+    <script src="http://threejs.org/examples/js/postprocessing/ShaderPass.js"></script>
+    <script src="http://threejs.org/examples/js/shaders/CopyShader.js"></script>
+    <script src="http://threejs.org/examples/js/shaders/RGBShiftShader.js"></script>
+    
     <script src="js/bundle.js"></script>
 
     <title>GTA KILL</title>
