nice font rendering

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         canvas
         {
             position: absolute;
+            display: block;
+            visibility: hidden;
+        }
+
+        #main {
+            visibility: visible;
         }
 
         #overlay {
