attempt to touch up deltameshes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="/sty/favicon.png"/>
+
     <meta name="description" content="GTA KILL">
     <meta name="keywords" content="gta2,gta 2,2,2.0,kill,net,webgl,browser,game,grand,theft,auto">
 
