--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 </head>
 
 <body>
+    <iframe style="display: none" width="560" height="315" src="https://www.youtube.com/embed/ZPaEB9NtjXc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div id="overlay"></div>
     <div id="logo">
 
