--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <script src="js/bundle.js"></script>
 
-    <title>GTA KILL</title>
+    <title>GTA</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
@@ -79,7 +79,10 @@
 </head>
 
 <body>
+    <!--
     <iframe style="display: none" width="560" height="315" src="https://www.youtube.com/embed/ZPaEB9NtjXc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    -->
+    
     <div id="overlay"></div>
     <div id="logo">
 
